# nitrogen

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  cbindgen.toml
.github/ISSUE_TEMPLATE/: code-change-note.md  error-report.md
example/: Cargo.toml  build.rs
example/shaders/: read.hlsl  test.frag  test.hlsl  test.vert
example/src/: main.rs
examples/: Cargo.toml  build.rs
examples/2d-squares/: main.rs
examples/2d-squares/shaders/: move.hlsl  quad.hlsl
examples/common/: Cargo.toml
examples/common/src/: lib.rs  main_loop.rs  resource.rs
examples/compute/: main.rs
examples/compute/shaders/: add.hlsl  push_add.comp
examples/model/: main.rs
examples/model/shaders/: model.hlsl
examples/multi-graph/: main.rs
examples/multi-graph/shaders/: canvas.hlsl  clear.hlsl  post_blur.hlsl  post_combine.hlsl  post_separate.hlsl
examples/multi-target/: main.rs
examples/multi-target/assets/: LICENSE
examples/multi-target/shaders/: read.hlsl  split.hlsl
examples/opaque-alpha/: main.rs  main_loop.rs
examples/opaque-alpha/shaders/: canvas.hlsl
examples/triangle/: main.rs
examples/triangle/shaders/: triangle.hlsl
examples/two-pass/: main.rs
examples/two-pass/shaders/: read.hlsl  test.hlsl
nitrogen/: Cargo.toml  build.rs
nitrogen-ffi/: Cargo.toml  build.rs  cbindgen.toml
nitrogen-ffi/src/: image.rs  lib.rs  sampler.rs
nitrogen/benches/: buffer.rs  common.rs  graph_compilation.rs
nitrogen/src/: device.rs  display.rs  lib.rs  submit_group.rs  types.rs
nitrogen/src/core_shaders/: present.frag  present.hlsl  present.vert
nitrogen/src/graph/: baked.rs  builder.rs  command.rs  compiled.rs  constructed.rs  execution.rs  execution_path.rs  mod.rs  pass.rs  setup.rs  store.rs
nitrogen/src/graph/builder/: mod.rs  resource_descriptor.rs
nitrogen/src/graph/compilation/: input.rs  mod.rs  resolve.rs
nitrogen/src/graph/execution/: derive.rs  execute.rs  graph.rs  mod.rs  prepare.rs
nitrogen/src/graph/pass/: command.rs  dispatcher.rs  mod.rs
nitrogen/src/old_graph/: builder.rs  compiled.rs  constructed.rs  mod.rs
nitrogen/src/resources/: buffer.rs  command_pool.rs  image.rs  material.rs  mod.rs  pipeline.rs  render_pass.rs  sampler.rs  semaphore_pool.rs  shader.rs  vertex_attrib.rs  vertex_buffer.rs
nitrogen/src/util/: allocator.rs  mod.rs  pool.rs  storage.rs  submit_group.rs  transfer.rs
nitrogen/src/util/allocator/: empty.rs  gfxm.rs  mod.rs  rendy.rs
src/: image.rs  lib.rs  texture.rs
src/bindings/: mod.rs
