[package]
name = "nitrogen"
version = "0.1.0"
authors = ["Thomas Herzog <thomas.herzog@simedis.com>"]

[lib]
crate-type = ["staticlib"]


[dependencies]
ash = "0.24.4"
slab = "0.4.1"
either = "1.5.0"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
default-features = false
features = []

[build-dependencies]
cbindgen = "0.6.3"