[package]
name = "nitrogen-examples"
version = "0.1.0"
publish = false
authors = ["Thomas Herzog <thomas.herzog@simedis.com>"]
edition = "2018"

[dependencies]
nitrogen = { path = "../nitrogen", features = ["winit"] }
winit = "0.19"
image = "0.20.0"
log = "0.4.5"
rand = "0.6.0"
env_logger = "0.5.13"
tobj = "0.1.6"
cgmath = "0.16.1"

nitrogen-examples-common = { path = "common" }

[build-dependencies]
shaderc = "0.3.12"

[[example]]
name = "triangle"
path = "triangle/main.rs"

# [[example]]
# name = "two-pass"
# path = "two-pass/main.rs"

[[example]]
name = "2d-squares"
path = "2d-squares/main.rs"

# [[example]]
# name = "multi-target"
# path = "multi-target/main.rs"

[[example]]
name = "compute"
path = "compute/main.rs"

[[example]]
name = "opaque-alpha"
path = "opaque-alpha/main.rs"

[[example]]
name = "model"
path = "model/main.rs"
