[package]
name = "nitrogen-ffi"
version = "0.1.0"
authors = ["Thomas Herzog <thomas.herzog@simedis.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
env_logger = "0.5.13"
smallvec = "0.6.5"

[dependencies.nitrogen]
path = "../nitrogen"
default-features = false
features = ["x11"]

[build-dependencies]
cbindgen = "0.6.3"
