[package]
name = "nitrogen"
version = "0.1.0"
authors = ["Thomas Herzog <thomas.herzog@simedis.com>"]
edition = "2018"
license = "MPL-2.0"


[features]
default = ["winit_support", "alloc_gfxm"]
winit_support = ["back/winit", "winit"]
x11 = []
alloc_gfxm = ["gfx-memory"]


[dependencies]
slab = "0.4.1"
derive_more = "0.14.0"
bitflags = "1.0.4"
smallvec = "0.6.5"
winit = { version = "0.18", optional = true }

gfx = { version = "0.1.0", package = "gfx-hal", default-features = false }
back = { version = "0.1.0", package = "gfx-backend-vulkan", default-features = false }

[dependencies.gfx-memory]
git = "https://github.com/gfx-rs/gfx-memory"
rev = "089f13b60fdb65b4302dbf2850afc83b87119214"
optional = true

# [dependencies.gfxm]
# package = "rendy-memory"
# git = "https://github.com/omni-viral/rendy/"
# rev = "7921de05f2727b0be5fd1fbf8420d527c5bfaee5"
