[package]
name = "nitrogen"
version = "0.1.0"
authors = ["Thomas Herzog <thomas.herzog@simedis.com>"]
edition = "2018"
license = "MPL-2.0"


[features]
default = ["winit_support", "alloc_rendy"]
winit_support = ["back/winit", "winit"]
x11 = []
alloc_rendy = ["rendy-memory"]


[dependencies]
slab = "0.4.1"
derive_more = "0.14.0"
bitflags = "1.0.4"
smallvec = "0.6.5"
winit = { version = "0.19", optional = true }

gfx = { version = "0.2.0", package = "gfx-hal", default-features = false }
back = { version = "0.2.0", package = "gfx-backend-vulkan", default-features = false }

rendy-memory = { version = "0.2.0", optional = true }
